--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "devDependencies": {
     "react-native-scripts": "1.5.0",
-    "jest-expo": "^21.0.2",
+    "jest-expo": "21.0.2",
     "react-test-renderer": "16.0.0-alpha.12"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -19,9 +19,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^21.0.0",
+    "expo": "21.0.0",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.48.4",
-    "react-navigation": "^1.0.0-beta.15"
+    "react-native": "0.48.4",
+    "react-native-qrcode-svg": "5.0.3",
+    "react-native-svg": "5.4.2",
+    "react-navigation": "1.0.0-beta.15"
   }
 }
