--- a/app.json
+++ b/app.json
@@ -1,10 +1,19 @@
 {
   "expo": {
+    "name": "BitWallet",
+    "slug": "bitwallet",
+    "version": "0.0.1",
     "sdkVersion": "21.0.0",
     "primaryColor": "#27354A",
     "androidStatusBar": {
       "backgroundColor": "#000000",
       "barStyle": "light-content"
+    },
+    "ios": {
+      "bundleIdentifier": "com.bitwallet.app"
+    },
+    "android": {
+      "package": "com.bitwallet.app"
     }
   }
 }
