--- a/package.json
+++ b/package.json
@@ -2,11 +2,6 @@
   "name": "BitWallet",
   "version": "0.1.0",
   "private": true,
-  "devDependencies": {
-    "react-native-scripts": "1.5.0",
-    "jest-expo": "21.0.2",
-    "react-test-renderer": "16.0.0-alpha.12"
-  },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
     "start": "react-native-scripts start",
@@ -22,6 +17,7 @@
     "axios": "0.17.0",
     "ethers": "2.1.2",
     "expo": "21.0.0",
+    "moment": "^2.19.1",
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.4",
     "react-native-qrcode-svg": "5.0.3",
@@ -30,5 +26,10 @@
     "react-redux": "5.0.6",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0"
+  },
+  "devDependencies": {
+    "react-native-scripts": "1.5.0",
+    "jest-expo": "21.0.2",
+    "react-test-renderer": "16.0.0-alpha.12"
   }
 }
