--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,7 @@
 {
-  "presets": ["babel-preset-expo"],
-  "env": {
-    "development": {
-      "plugins": ["transform-react-jsx-source"]
-    }
-  },
+  "presets": ["react-native"],
   "plugins": [
+    "transform-decorators-legacy",
     ["module-resolver", {
       "alias": {
         "assets": "./assets",
