--- a/package.json
+++ b/package.json
@@ -2,24 +2,22 @@
   "name": "BitWallet",
   "version": "0.1.0",
   "private": true,
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
-    "test": "node node_modules/jest/bin/jest.js --watch"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "postinstall": "react-native upgrade && react-native link",
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest",
+    "clean-android": "cd android && ./gradlew clean && cd ..",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios"
   },
   "dependencies": {
     "axios": "0.17.0",
     "ethers": "2.1.2",
-    "expo": "21.0.0",
-    "moment": "^2.19.1",
+    "moment": "2.19.1",
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.4",
+    "react-native-barcodescanner": "3.1.1",
+    "react-native-permissions": "1.0.1",
     "react-native-qrcode-svg": "5.0.3",
     "react-native-svg": "5.4.2",
     "react-navigation": "1.0.0-beta.15",
@@ -28,8 +26,15 @@
     "redux-thunk": "2.2.0"
   },
   "devDependencies": {
-    "react-native-scripts": "1.5.0",
-    "jest-expo": "21.0.2",
+    "babel-jest": "21.2.0",
+    "babel-plugin-module-resolver": "2.7.1",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-preset-react-native": "4.0.0",
+    "eslint-config-rallycoding": "3.2.0",
+    "jest": "21.2.1",
     "react-test-renderer": "16.0.0-alpha.12"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
