--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "ios": "react-native run-ios"
   },
   "dependencies": {
+    "autobind-decorator": "2.1.0",
     "axios": "0.17.0",
     "ethers": "2.1.2",
     "moment": "2.19.1",
-    "react": "16.0.0-alpha.12",
-    "react-native": "0.48.4",
+    "react": "16.0.0",
+    "react-native": "0.49.3",
     "react-native-barcodescanner": "3.1.1",
     "react-native-permissions": "1.0.1",
     "react-native-qrcode-svg": "5.0.3",
@@ -32,7 +33,7 @@
     "babel-preset-react-native": "4.0.0",
     "eslint-config-rallycoding": "3.2.0",
     "jest": "21.2.1",
-    "react-test-renderer": "16.0.0-alpha.12"
+    "react-test-renderer": "16.0.0"
   },
   "jest": {
     "preset": "react-native"
