--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 # Xcode
 #
+ios/
 build/
 *.pbxuser
 !default.pbxuser
@@ -21,16 +22,15 @@ DerivedData
 *.ipa
 *.xcuserstate
 project.xcworkspace
-ios/
 
 # Android/IntelliJ
 #
+android/
 build/
 .idea
 .gradle
 local.properties
 *.iml
-android/
 
 # node.js
 #
@@ -48,8 +48,8 @@ buck-out/
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
 # screenshots whenever they are needed.
 # For more information about the recommended setup visit:
-# https://github.com/fastlane/fastlane/blob/master/fastlane/docs/Gitignore.md
+# https://docs.fastlane.tools/best-practices/source-control/
 
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
+*/fastlane/report.xml
+*/fastlane/Preview.html
+*/fastlane/screenshots
