--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "2.19.1",
     "react": "16.0.0",
     "react-native": "0.49.3",
+    "react-native-camera": "0.10.0",
     "react-native-permissions": "1.0.1",
     "react-native-qrcode-svg": "5.0.3",
     "react-native-svg": "5.4.2",
