--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
     "clean-android": "cd android && ./gradlew clean && cd ..",
-    "android": "react-native run-android",
+    "android": "react-native run-android && adb logcat *:S ReactNative:V ReactNativeJS:V",
     "ios": "react-native run-ios"
   },
   "dependencies": {
