Updating react-native lib

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "postinstall": "react-native upgrade && react-native link",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
-    "clean-android": "cd android && ./gradlew clean && cd ..",
+    "android-build": "cd android && ./gradlew assembleDebug && cd .. && cp android/app/build/outputs/apk/app-debug.apk .",
+    "android-bundle": "react-native bundle --dev false --platform android --entry-file index.js --bundle-output ./android/app/build/intermediates/assets/debug/index.android.bundle --assets-dest ./android/app/build/intermediates/res/merged/debug",
+    "android-clean": "cd android && ./gradlew clean && cd ..",
     "android": "react-native run-android && adb logcat *:S ReactNative:V ReactNativeJS:V",
     "ios": "react-native run-ios"
   },
@@ -16,7 +18,7 @@
     "ethers": "2.1.2",
     "moment": "2.19.1",
     "react": "16.0.0",
-    "react-native": "0.49.3",
+    "react-native": "0.49.5",
     "react-native-camera": "0.10.0",
     "react-native-permissions": "1.0.1",
     "react-native-qrcode-svg": "5.0.3",
