--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,8 @@
     ["module-resolver", {
       "alias": {
         "assets": "./assets",
-        "common": "./src/common"
+        "common": "./src/common",
+        "components": "./src/components"
       }
     }]
   ]
