--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-qrcode-svg": "5.0.3",
     "react-native-sensitive-info": "5.1.0",
     "react-native-svg": "5.4.2",
+    "react-native-vector-icons": "4.4.2",
     "react-navigation": "1.0.0-beta.15",
     "react-redux": "5.0.6",
     "redux": "3.7.2",
