--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "axios": "0.17.1",
     "ethers": "2.1.3",
     "moment": "2.19.2",
+    "mobx": "3.3.1",
+    "mobx-react": "4.3.4",
     "react": "16.1.0",
     "react-native": "0.50.3",
     "react-native-camera": "0.12.0",
@@ -26,10 +28,7 @@
     "react-native-sensitive-info": "5.1.0",
     "react-native-svg": "6.0.0",
     "react-native-vector-icons": "4.4.2",
-    "react-navigation": "1.0.0-beta.19",
-    "react-redux": "5.0.6",
-    "redux": "3.7.2",
-    "redux-thunk": "2.2.0"
+    "react-navigation": "1.0.0-beta.19"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
