--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "scripts": {
     "postinstall": "react-native upgrade && react-native link",
-    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start": "react-native start",
     "test": "jest",
-    "android-build": "cd android && ./gradlew assembleDebug && cd .. && cp android/app/build/outputs/apk/app-debug.apk BitWallet.apk",
-    "android-bundle": "react-native bundle --dev false --platform android --entry-file index.js --bundle-output ./android/app/build/intermediates/assets/debug/index.android.bundle --assets-dest ./android/app/build/intermediates/res/merged/debug",
-    "android-clean": "cd android && ./gradlew clean && cd ..",
-    "android-generate-dev": "npm run android-bundle && npm run android-build",
-    "android": "react-native run-android && adb logcat *:S ReactNative:V ReactNativeJS:V",
-    "ios": "react-native run-ios"
+    "android:build": "cd android && ./gradlew assembleDebug && cd .. && cp android/app/build/outputs/apk/app-debug.apk BitWallet.apk",
+    "android:bundle": "react-native bundle --dev false --platform android --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
+    "android:clean": "cd android && ./gradlew clean && cd ..",
+    "android:generate": "npm run android:bundle && npm run android:build",
+    "android": "react-native run-android && react-native log-android",
+    "ios": "react-native run-ios && react-native log-ios"
   },
   "dependencies": {
     "autobind-decorator": "2.1.0",
@@ -20,7 +20,7 @@
     "moment": "2.19.2",
     "mobx": "3.3.1",
     "mobx-react": "4.3.4",
-    "react": "16.1.0",
+    "react": "16.1.1",
     "react-native": "0.50.3",
     "react-native-camera": "0.12.0",
     "react-native-permissions": "1.0.1",
@@ -28,7 +28,7 @@
     "react-native-sensitive-info": "5.1.0",
     "react-native-svg": "6.0.0",
     "react-native-vector-icons": "4.4.2",
-    "react-navigation": "1.0.0-beta.16"
+    "react-navigation": "1.0.0-beta.19"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
@@ -37,7 +37,7 @@
     "babel-preset-react-native": "4.0.0",
     "eslint-config-rallycoding": "3.2.0",
     "jest": "21.2.1",
-    "react-test-renderer": "16.0.0"
+    "react-test-renderer": "16.1.1"
   },
   "jest": {
     "preset": "react-native"
