--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "autobind-decorator": "2.1.0",
     "axios": "0.17.1",
     "ethers": "2.1.3",
-    "moment": "2.19.2",
     "mobx": "3.3.1",
     "mobx-react": "4.3.4",
+    "moment": "2.19.2",
     "react": "16.1.1",
     "react-native": "0.50.3",
     "react-native-camera": "0.12.0",
+    "react-native-linear-gradient": "^2.3.0",
     "react-native-permissions": "1.0.1",
     "react-native-qrcode-svg": "5.0.3",
     "react-native-sensitive-info": "5.1.0",
