Adding sample offers

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-permissions": "1.0.1",
     "react-native-qrcode-svg": "5.0.3",
     "react-native-sensitive-info": "5.1.0",
+    "react-native-snap-carousel": "3.4.0",
     "react-native-svg": "6.0.0",
     "react-native-vector-icons": "4.4.2",
     "react-navigation": "1.0.0-beta.19"
